<resources>
    <string name="app_name">Final Project</string>
    <string name="masuk_ke_akun">Masuk Ke Akun</string>
    <string name="info_login">Masuk untuk melakukan penjelajahan</string>
    <string name="belum_memiliki_akun">Belum Memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">lupa Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="info_register">Yuk, gabung dengan komunitas kami</string>
    <string name="name">Nama</string>
    <string name="sudah_memiliki_akun">Sudah memiliki akun</string>
    <string name="masuk">Masuk</string>
    <string name="description_register">Dengan melakukan pendaftaran, kamu telah menyetujui</string>
    <string name="description_register2">Ketentuan layanan dan Kebijakan privasi</string>
    <string name="kategori">Kategori</string>
    <string name="home">Home</string>
    <string name="beauty_feed">Beautyfeed</string>
    <string name="order">Order</string>
    <string name="my_profile">My Profile</string>
    <string name="skincare">Skincare</string>
    <string name="bundle_skincare">Bundle Skincare</string>
    <string name="produk_pria">Produk Pria</string>
    <string name="makeup">Makeup</string>
    <string name="makeup_organik">Makeup Organik</string>
    <string name="skincare_organik">Skincare Organik</string>
    <string name="masuk_dengan_akun_google">Masuk Dengan Akun google</string>
    <string name="rp_7000">Rp. 7000</string>
    <string name="artikel_terbaru">Artikel Terbaru</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="perawatan_kulit">Perawatan Kulit</string>
    <string name="isi_artikel">Cara terbaik untuk merawat kulit</string>
    <string name="datetime">12 Agustus 2022</string>
    <string name="search">Search</string>
    <string name="Search">Search</string>
    <string name="makin_hemat_pakai_promo">Makin hemat pakai promo</string>
    <string name="subtotal">Subtotal</string>
    <string name="organik">Organik</string>
    <string name="payment">Metode Pembayaran</string>
    <string name="payment_bank">Transfer Bank (Verifikasi Manual)</string>
    <string name="payment_va">Transfer Virtual Account</string>
    <string name="payment_e_wallet">e-Wallet</string>
    <string name="payment_bca">Transfer Bank BCA</string>
    <string name="payment_bni">Transfer Bank BNI</string>
    <string name="payment_bri">Transfer Bank BRI</string>
    <string name="payment_mandiri">Transfer Bank Mandiri</string>
    <string name="payment_va_bca">BCA Virtual Account</string>
    <string name="payment_va_bni">BNI Virtual Account</string>
    <string name="payment_va_bri">BRIVA</string>
    <string name="payment_va_mandiri">Mandiri Virtual Account</string>
    <string name="gopay">GoPay</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="step_1">1</string>
    <string name="step_2">2</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="price_payment">Rp 280.000</string>
    <string name="cara_pembayaran">Cara Pembayaran</string>
    <string name="default_pembayaran">Kamu belum memilih metode pembayaran.</string>
    <string name="bayar">Bayar</string>
    <string name="detail_produk">Aloe Hydramild Essence Toner</string>
    <string name="ukuran_produk_kecil">100 ml</string>
    <string name="ukuran_produk_besar">200 ml</string>
    <string name="harga_produk">Rp 55.000</string>
    <string name="rating_produk">4.0 (5 ulasan)</string>
    <string name="brand_produk">WARDAH</string>
    <string name="link_brand">Kunjungi katalog Brand</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="title">Title Produk</string>
    <string name="Description">Description Produk</string>
    <string name="size">Size</string>
    <string name="add_coment">Berikan Komentar Kamu</string>
    <string name="text_review">Yuk, ceritakan pengalaman kamu pakai produk ini</string>
    <string name="add_review">Add Review</string>
    <string name="kirim">Kirim</string>
    <string name="add_photo_review">Tambahkan Foto Review Produk</string>
    <string name="recomendation">Apakah kamu merekomendasikan produk ini ?</string>
    <string name="pasti_rekomendasi">Pasti rekomendasi</string>
    <string name="hmm_mungkin">Hmm, mungkin</string>
    <string name="time">2 jam lalu</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu augue ut lectus arcu bibendum at varius vel pharetra.</string>
    <string name="Wardah">Brand</string>
</resources>